--- a/05.html
+++ b/05.html
@@ -25,13 +25,13 @@
                     <h3>Video</h3>
                     <div class="inner">
                         <video controls>
-                            <source src="#" type="video/mp4">
+                            <source src="videos/felicidad.mov" type="video/mov">
                         </video>
                         <video controls>
-                            <source src="videos/thespiritsinit.mov" type="video/mp4">
+                            <source src="videos/thespiritsinit.mov" type="video/mov">
                         </video>
                         <video controls>
-                            <source src="videos/thespiritsinit.mov" type="video/mp4">
+                            <source src="videos/villain.mov" type="video/mov">
                         </video>
                     </div>
                 </div>
