--- a/05.html
+++ b/05.html
@@ -24,15 +24,9 @@
                 <div id="preview">
                     <h3>Video</h3>
                     <div class="inner">
-                        <video controls>
-                            <source src="videos/felicidad.mov" type="video/mov">
-                        </video>
-                        <video controls>
-                            <source src="videos/thespiritsinit.mov" type="video/mov">
-                        </video>
-                        <video controls>
-                            <source src="videos/villain.mov" type="video/mov">
-                        </video>
+                        <iframe src="https://youtu.be/5P0uD_wpXUQ" frameborder="0"></iframe>
+                        <iframe src="https://youtu.be/YkOLqKCcwWA" frameborder="0"></iframe>
+                        <iframe src="https://youtu.be/DJuZVodcEmM" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
