--- a/05.html
+++ b/05.html
@@ -24,9 +24,9 @@
                 <div id="preview">
                     <h3>Video</h3>
                     <div class="inner">
-                        <iframe src="https://youtu.be/5P0uD_wpXUQ" frameborder="0"></iframe>
-                        <iframe src="https://youtu.be/YkOLqKCcwWA" frameborder="0"></iframe>
-                        <iframe src="https://youtu.be/DJuZVodcEmM" frameborder="0"></iframe>
+                        <iframe src="https://www.youtube.com/embed/5P0uD_wpXUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/YkOLqKCcwWA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/DJuZVodcEmM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
