--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!--                <li><a href="#">3</a></li>-->
                 <li><a href="04.html">p5.js</a></li>
                 <li><a href="05.html">others</a></li>
-                <li><a href="index.html">MEWSE</a></li>
+                <li><a href="https://cheonjihyun.github.io/showwindow/">prev</a></li>
             </ul>
         </section>
         <footer>
